# BachelorProjectAppendix

./: README.md
Igor/Fleeter/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Fleeter.sln  UpgradeLog.htm
Igor/Fleeter/Assets/: packages.config
Igor/Fleeter/Assets/Heightmaps/: Terrain_heightmap.raw  Terrain_heightmap.xcf
Igor/Fleeter/Assets/Prefabs/: Robot.prefab
Igor/Fleeter/Assets/Resources/: nodelist.txt
Igor/Fleeter/Assets/Scenes/: MainMenu.unity  RealTimeVisualization2D.unity  RealTimeVisualization3D.unity  Tracking.unity
Igor/Fleeter/Assets/Scripts/: HeightMapConverter.cs  PermanentObject.cs  TcpRobotController.cs  UiInteractions.cs
Igor/Fleeter/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Igor/Fleeter/Temp/: workerlic
Igor/Fleeter/UserSettings/: EditorUserSettings.asset
Igor/Fleeter/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
Igor/ServerAPI/: Program.cs  ServerAPI.sln
Igor/ServerAPI/Controllers/: RobotDataController.cs
Igor/ServerAPI/Data/: DatabaseContext.cs
Igor/ServerAPI/Models/: RobotInfoModel.cs
Igor/ServerAPI/Properties/: launchSettings.json
Igor/ServerAPI/Properties/PublishProfiles/: FolderProfile.pubxml
Tommi/: README.md
Tommi/3drenderframework/: Controller.sln
Tommi/3drenderframework/Controller/: Controller.vcxproj  Controller.vcxproj.filters  imgui.ini
Tommi/CMakeprojforrobot/: CMakeLists.txt  main.cpp  pose_monitor.cpp  pose_monitor.h  robotpos.cpp  robotpos.h  sock.cpp  sock.h  speed_monitor.cpp  speed_monitor.h  speedcontrol.cpp  speedcontrol.h
(+62 files in other folders)
